outer module configured
Change-Id: Ibaff2848be0406e2f5084adf06933747d341dd7d

--- a/build.gradle
+++ b/build.gradle
@@ -3,3 +3,21 @@ allprojects {
    apply plugin: 'java'
 }
 
+
+allprojects {
+
+  repositories {
+      mavenCentral()
+  }
+
+}
+
+project('external:modules:lib-b') {
+
+    configurations.all {
+        resolutionStrategy.dependencySubstitution { 
+            substitute project(':modules:lib-a') with module('org.apache.commons:commons-collections4:4.4')
+        }
+    }
+
+}
